--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "expo": "~52.0.28",
+    "expo-clipboard": "~7.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "^0.76.7",
-    "expo-clipboard": "~7.0.1"
+    "react-native": "^0.76.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
